# Nighty-Hardware-Tester

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  README.md  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-backend.yml  build-tester.yml  build.yml
Panel-Tester/: build.gradle.kts  settings.gradle.kts
aux_tester_firmware/: platformio.ini
aux_tester_firmware/lib/bno080/: BNO080.cpp  BNO080.h  PinReader.h
aux_tester_firmware/lib/i2cscan/: i2cscan.cpp  i2cscan.h
aux_tester_firmware/src/: MCP23X17PinReader.cpp  MCP23X17PinReader.h  debug.h  main.cpp
aux_tester_firmware/src/sensors/: bno080sensor.cpp  bno080sensor.h  sensor.cpp  sensor.h
aux_tester_firmware/src/sensors/softfusion/: softfusionsensor.h
backend/: .dockerignore  .env-example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  package.json  tailwind.config.cjs
backend/docker/: start.sh
backend/prisma/: schema.prisma
backend/prisma/migrations/20221220140044_init/: migration.sql
backend/prisma/migrations/20221222171648_logs_for_values/: migration.sql
backend/src/components/: Chip.tsx  Report.tsx  ReportList.tsx
backend/src/env/: schema.mjs
backend/src/hooks/: useReports.ts
backend/src/pages/: _app.tsx  index.tsx
backend/src/utils/: result.ts  trpc.ts
src/: main.rs
tester/: Cargo.toml  Dockerfile  README.md
tester/src/: adc.rs  api.rs  esp.rs  esptool.rs  lib.rs  log.rs  main.rs  options.rs  pio.rs  tui.rs  usb.rs
tester/src/api/: client.rs  dtos.rs  mod.rs
tester/src/helpers/: esp.rs  esptool.rs  logger.rs  mod.rs  pio.rs  serial.rs  usb.rs
tester/src/test_executors/: auxboard.rs  mainboard.rs  mod.rs
updater/: Cargo.toml
updater/src/: lib.rs  main.rs  options.rs  upload_update.rs
updater/src/helpers/: logger.rs  mod.rs  pio.rs  serial.rs
(+62 files in other folders)
