[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[dependencies]
ads1x1x = "0.2.2"
chrono = "0.4.22"
colored = "2.0.0"
crossterm = "0.25.0"
embedded-hal = "0.2.7"
log = "0.4.17"
nb = "1.0.0"
rppal = { version = "0.13.1", features = ["hal"] }
rusb = { version = "0.9.1", features = ["vendored"] }
serialport = "4.2.0"
tracing = { version = "0.1.37", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tui = "0.19.0"
