[package]
name = "updater"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
colored = "2.0.0"
crossterm = "0.27.0"
rusb = { version = "0.9.1", features = ["vendored"] }
serialport = "4.2.0"
regex = "1.10.2"
hex = "0.4.3"
